Fixed zoom window behind the video detail window

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1023,6 +1023,7 @@ div.canvas-wrapper:nth-child(2) {
 
     &.visible {
         display: block;
+        z-index: 300;
     }
 }
 
